--- a/style.css
+++ b/style.css
@@ -10,4 +10,16 @@
 
 .container {
   height: 100vh;
+  display: grid;
+  place-content: center;
+  background-color: #cbb4db;
+}
+
+#size {
+  position: absolute;
+  top: 60%;
+  left: 50%;
+  transform: translateX(-50%);
+  font-size: 35px;
+  color: red;
 }/*# sourceMappingURL=style.css.map */
