--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   height: 100vh;
   display: grid;
   place-content: center;
-  background-color: #cbb4db;
+  background-color: white;
 }
 
 #size {
@@ -22,4 +22,25 @@
   transform: translateX(-50%);
   font-size: 35px;
   color: red;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    background-color: #bee1e6;
+  }
+}
+@media (max-width: 992px) {
+  .container {
+    background-color: #52b788;
+  }
+}
+@media (max-width: 768px) {
+  .container {
+    background-color: #fff1e6;
+  }
+}
+@media (max-width: 576px) {
+  .container {
+    background-color: #cbb4db;
+  }
 }/*# sourceMappingURL=style.css.map */
