--- a/Proyecto2/style.css
+++ b/Proyecto2/style.css
@@ -5,14 +5,6 @@
 }
 * body {
   font-family: sans-serif;
-  font-size: 35px;
-}
-
-.container {
-  height: 100vh;
-  display: grid;
-  place-content: center;
-  background-color: white;
 }
 
 #size {
@@ -24,23 +16,21 @@
   color: red;
 }
 
-@media (max-width: 1200px) {
-  .container {
-    background-color: #bee1e6;
-  }
+.container {
+  height: 100vh;
 }
-@media (max-width: 992px) {
-  .container {
-    background-color: #52b788;
-  }
+
+.header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
-@media (max-width: 768px) {
-  .container {
-    background-color: #fff1e6;
-  }
+.header__logo {
+  font-size: 4vw;
 }
-@media (max-width: 576px) {
-  .container {
-    background-color: #cbb4db;
-  }
+.header__menu {
+  display: flex;
+  flex-direction: row;
+  font-size: 2.5vw;
+  gap: 15px;
 }/*# sourceMappingURL=style.css.map */
