--- a/Proyecto2/style.scss
+++ b/Proyecto2/style.scss
@@ -1,13 +1,3 @@
-$color-1: #cbb4db; // Mobile
-$color-2: #fff1e6; // Tablet
-$color-3: #52b788; // Laptop
-$color-4: #bee1e6; // Desktop
-
-$mobile: 576px;
-$tablet: 768px;
-$laptop: 992px;
-$desktop: 1200px;
-
 * { // Reestablecemos la configuración de estilo por defecto del navegador
     margin: 0px;
     padding: 0px;
@@ -15,23 +5,8 @@ $desktop: 1200px;
 
     body{
         font-family: sans-serif;
-        font-size: 35px;
     }
 }
-
-.container {
-    height: 100vh;
-
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-
-    display: grid;
-    place-content: center;
-    background-color: white;
-}
-
-.text{}
 
 #size{
     position: absolute;
@@ -43,27 +18,31 @@ $desktop: 1200px;
     color: red;
 }
 
-@media (max-width: $desktop){
-    .container{
-        background-color: $color-4;
+.container {
+    height: 100vh;
+}
+
+.header {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+
+    &__logo{
+        font-size: 4vw;
+    }
+    &__menu{
+        display: flex;
+        flex-direction: row;
+        font-size: 2.5vw;
+        gap: 15px;
     }
 }
 
-@media (max-width: $laptop){
-    .container{
-        background-color: $color-3;
-    }
+.main{
+
 }
 
-@media (max-width: $tablet){
-    .container{
-        background-color: $color-2;
-    }
+.footer {
+    
 }
-
-@media (max-width: $mobile) {
-    // your styles are here
-    .container{
-        background-color: $color-1;
-    }
-}   
