--- a/Proyecto2/style.scss
+++ b/Proyecto2/style.scss
@@ -1,5 +1,5 @@
 * { // Reestablecemos la configuración de estilo por defecto del navegador
-    margin: 0px;
+    margin: 0px 5px;
     padding: 0px;
     box-sizing: border-box;
 
@@ -23,9 +23,11 @@
 }
 
 .header {
+    height: 10%;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
 
 
     &__logo{
@@ -40,9 +42,102 @@
 }
 
 .main{
+    height: 80%;
 
+    display: flex;
+    flex-direction: row;
+
+    &__image{
+        background-image: url('../images/Portrait.png');
+        background-size: contain;
+        background-position: left center;
+        background-repeat: no-repeat;
+        width: 50%;
+    }
+
+    &__text{
+        width: 50%;
+
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+
+        &-1{
+            font-size: 10vw;
+        }
+        &-2,&-3,&-4{
+            font-size: 5vw;
+        }
+    }
 }
 
 .footer {
-    
+    height: 10%;
+
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-end;
+    gap: 20px;
+    margin-right: 10%;
+
+    [class ^="footer__"]{
+        img{
+            width: 5.3vw;
+        }
+    }
+
+}
+
+@media (max-width: 650px){
+    .header{
+
+        justify-content: center;
+
+        &__logo{
+            font-size: 40px;
+        }
+
+        &__menu{
+            display: none;
+        }
+    }
+
+    .main{
+
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        &__image{
+            width: 200px;
+            height: 200px;
+            border-radius: 100%;
+            background-size: 100%;
+            background-position: center
+        }
+
+        &__text{
+            width: 100%;
+            &-1{
+                display: none;
+            }
+            &-2,&-3,&-4{
+                font-size: 30px;
+            }
+        }
+
+    }
+
+    .footer{
+
+        justify-content: center;
+        margin: 0px;
+        [class ^="footer__"]{
+            img{
+                width: 45px;
+                height: 45px;
+            }
+        }
+    }
 }
